recent_topics: Fix clear search button misaligned.
Looks like some changes actually improved aligned of this icon so
that we don't need this hacky margin.

--- a/web/styles/recent_topics.css
+++ b/web/styles/recent_topics.css
@@ -123,10 +123,6 @@
             padding-top: 6px !important;
         }
 
-        #recent_topics_search_clear {
-            margin-top: -10px !important;
-        }
-
         .btn-recent-filters {
             border-radius: 40px;
             margin: 0 5px 10px 0;
